# claim-file-splitter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/claim_file_splitter/: __init__.py  classifiers.py  cli.py  customization.py  models.py  pdf.py  pipeline.py
tests/: test_azure_classifier.py  test_cli_env.py  test_config.py  test_pdf_rendering.py  test_pipeline.py  test_segments.py
