[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-file-splitter"
version = "0.1.0"
description = "Azure AI Projects based claim-file PDF splitter and classifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-identity>=1.17.0",
    "openai>=1.80.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
claim-file-splitter = "claim_file_splitter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
