[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-file-splitter"
version = "0.1.0"
description = "Azure AI Projects based claim-file PDF splitter and classifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-identity>=1.17.0",
    "openai>=1.80.0",
    "Pillow>=9.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdfium2>=4.18.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
claim-file-splitter = "claim_file_splitter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
